force-app/main/default/objects/Apttus__AgreementHierarchy__c/fields/Apttus__AgreementLeafAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementLeafAccountId__c</fullName>
    <description>The account Id of the agreement leaf in the agreement hierarchy.
Root > Parent > Leaf - Account Id</description>
    <inlineHelpText>The account Id of the agreement leaf in the agreement hierarchy.
Root > Parent > Leaf - Account Id</inlineHelpText>
    <label>Agreement Leaf Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Hierarchies</relationshipLabel>
    <relationshipName>AgreementHierarchiesLeaf</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>