force-app/main/default/objects/Apttus__AgreementHierarchy__c/fields/Apttus__AgreementLeafId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementLeafId__c</fullName>
    <description>The agreement Id of the leaf within the agreement hierarchy.
Root > Parent > Leaf</description>
    <inlineHelpText>The agreement Id of the leaf within the agreement hierarchy.
Root > Parent > Leaf</inlineHelpText>
    <label>Agreement Leaf</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Hierarchies (Agreement)</relationshipLabel>
    <relationshipName>AgreementHierarchiesAgreement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>