force-app/main/default/objects/Apttus__AgreementHierarchy__c/fields/Apttus__AgreementRootId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementRootId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The agreement Id of the root. A root agreement is the primordial agreement which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root agreement for a hierarchy. 
Root > Parent > Leaf</description>
    <inlineHelpText>The agreement Id of the root. A root agreement is the primordial agreement which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root agreement for a hierarchy. 
Root > Parent > Leaf</inlineHelpText>
    <label>Agreement Root</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreement Hierarchies (RootId)</relationshipLabel>
    <relationshipName>AgreementHierarchiesRoot</relationshipName>
    <type>Lookup</type>
</CustomField>